cmake_minimum_required(VERSION 3.13)
project(LeetCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(LeetCode
        main.cpp LongestPalindromicSubstring.h)

add_executable(LeetCode003
        LeetCodeLib.h 003LongestSubstringWithoutRepeatingCharacters.cpp)

add_executable(LeetCode006
        LeetCodeLib.h 006ZigZagConversion.cpp)

add_executable(LeetCode008
        LeetCodeLib.h 008StringtoInteger\(atoi\).cpp)

add_executable(LeetCode011
        LeetCodeLib.h 011ContainerWithMostWater.cpp)

add_executable(LeetCode015
        LeetCodeLib.h 015_3Sums.cpp)

add_executable(LeetCode016
        LeetCodeLib.h 016_3SumClosest.cpp)

add_executable(LeetCode017
        LeetCodeLib.h 017LetterCombinationsofaPhoneNumber.cpp)

add_executable(LeetCode018
        LeetCodeLib.h 018_4Sum.cpp)

add_executable(LeetCode019
        LeetCodeLib.h 019RemoveNthNodeFromEndofList.cpp)

add_executable(LeetCode020
        LeetCodeLib.h 020ValidParentheses.cpp)

add_executable(LeetCode021
        LeetCodeLib.h 021MergeTwoSortedLists.cpp)

add_executable(LeetCode022
        LeetCodeLib.h 022GenerateParentheses.cpp)

add_executable(LeetCode023
        LeetCodeLib.h 023MergeKSortedLists.cpp)

add_executable(LeetCode024
        LeetCodeLib.h 024SwapNodesinPairs.cpp)

add_executable(LeetCode026
        LeetCodeLib.h 026RemoveDuplicatesfromSortedArray.cpp)

add_executable(LeetCode027
        LeetCodeLib.h 027RemoveElement.cpp)

add_executable(LeetCode028
        LeetCodeLib.h 028ImplementstrStr\(\).cpp)

add_executable(LeetCode029
        LeetCodeLib.h 029DivideTwoIntegers.cpp)

add_executable(LeetCode031
        LeetCodeLib.h 031NextPermutation.cpp)

add_executable(LeetCode033
        LeetCodeLib.h 033SearchinRotatedSortedArray.cpp)

add_executable(LeetCode034
        LeetCodeLib.h 034FindFirstandLastPositionofElementinSortedArray.cpp)

add_executable(LeetCode035
        LeetCodeLib.h 035SearchInsertPosition.cpp)

add_executable(LeetCode036
        LeetCodeLib.h 036ValidSudoku.cpp)

add_executable(LeetCode038
        LeetCodeLib.h 038CountandSay.cpp)

add_executable(LeetCode039
        LeetCodeLib.h 039CombinationSum.cpp)

add_executable(LeetCode040
        LeetCodeLib.h 040CombinationSumII.cpp)

add_executable(LeetCode041
        LeetCodeLib.h 041FirstMissingPositive.cpp)

add_executable(LeetCode043
        LeetCodeLib.h 043MultiplyStrings.cpp)

add_executable(LeetCode045
        LeetCodeLib.h 045JumpGameII.cpp)

add_executable(LeetCode046
        LeetCodeLib.h 046Permutations.cpp)

add_executable(LeetCode047
        LeetCodeLib.h 047PermutationsII.cpp)

add_executable(LeetCode048
        LeetCodeLib.h 048RotateImage.cpp)

add_executable(LeetCode049
        LeetCodeLib.h 049GroupAnagrams.cpp)

add_executable(LeetCode050
        LeetCodeLib.h 050Pow\(x,\ n\).cpp)

add_executable(LeetCode053
        LeetCodeLib.h 053MaximumSubarray.cpp)

add_executable(LeetCode054
        LeetCodeLib.h 054SpiralMatrix.cpp)

add_executable(LeetCode055
        LeetCodeLib.h 055JumpGame.cpp)

add_executable(LeetCode056
        LeetCodeLib.h 056MergeIntervals.cpp)

add_executable(LeetCode057
        LeetCodeLib.h 057InsertInterval.cpp)

add_executable(LeetCode058
        LeetCodeLib.h 058LengthofLastWord.cpp)

add_executable(LeetCode059
        LeetCodeLib.h 059SpiralMatrixII.cpp)

add_executable(LeetCode060
        LeetCodeLib.h 060PermutationSequence.cpp)

add_executable(LeetCode061
        LeetCodeLib.h 061RotateList.cpp)

add_executable(LeetCode062
        LeetCodeLib.h 062UniquePaths.cpp)

add_executable(LeetCode063
        LeetCodeLib.h 063UniquePathsII.cpp)

add_executable(LeetCode064
        LeetCodeLib.h 064MinimumPathSum.cpp)

add_executable(LeetCode066
        LeetCodeLib.h 066PlusOne.cpp)

add_executable(LeetCode067
        LeetCodeLib.h 067AddBinary.cpp)

add_executable(LeetCode068
        LeetCodeLib.h 068TextJustification.cpp)

add_executable(LeetCode069
        LeetCodeLib.h 069Sqrt\(x\).cpp)

add_executable(LeetCode070
        LeetCodeLib.h 070ClimbingStairs.cpp)

add_executable(LeetCode072
        LeetCodeLib.h 072Searcha2DMatrix.cpp)

add_executable(LeetCode073
        LeetCodeLib.h 073SetMatrixZeroes.cpp)

add_executable(LeetCode075
        LeetCodeLib.h 075SortColors.cpp)

add_executable(LeetCode077
        LeetCodeLib.h 077Combinations.cpp)

add_executable(LeetCode078
        LeetCodeLib.h 078Subsets.cpp)

add_executable(LeetCode079
        LeetCodeLib.h 079WordSearch.cpp)

add_executable(LeetCode080
        LeetCodeLib.h 080RemoveDuplicatesfromSortedArrayII.cpp)

add_executable(LeetCode081
        LeetCodeLib.h 081SearchinRotatedSortedArrayII.cpp)

add_executable(LeetCode082
        LeetCodeLib.h 082RemoveDuplicatesfromSortedListII.cpp)

add_executable(LeetCode083
        LeetCodeLib.h 083RemoveDuplicatesfromSortedList.cpp)

add_executable(LeetCode084
        LeetCodeLib.h 084LargestRectangleinHistogram.cpp)

add_executable(LeetCode086
        LeetCodeLib.h 086PartitionList.cpp)

add_executable(LeetCode088
        LeetCodeLib.h 088MergeSortedArray.cpp)

add_executable(LeetCode089
        LeetCodeLib.h 089GrayCode.cpp)

add_executable(LeetCode090
        LeetCodeLib.h 090SubsetsII.cpp)

add_executable(LeetCode091 LeetCodeLib.h
        091DecodeWays.cpp)

add_executable(LeetCode092 LeetCodeLib.h
        092ReverseLinkedListII.cpp)

add_executable(LeetCode093 LeetCodeLib.h
        093RestoreIPAddresses.cpp)

add_executable(LeetCode094 LeetCodeLib.h
        094BinaryTreeInorderTraversal.cpp)

add_executable(LeetCode095 LeetCodeLib.h
        095UniqueBinarySearchTreesII.cpp)

add_executable(LeetCode096 LeetCodeLib.h
        096UniqueBinarySearchTrees.cpp)

add_executable(LeetCode097 LeetCodeLib.h
        097InterleavingString.cpp)

add_executable(LeetCode098 LeetCodeLib.h
        098ValidateBinarySearchTree.cpp)

add_executable(LeetCode100 LeetCodeLib.h
        100SameTree.cpp)

add_executable(LeetCode102
        LeetCodeLib.h 102BinaryTreeLevelOrderTraversal.cpp)

add_executable(LeetCode101
        LeetCodeLib.h 101SymmetricTree.cpp)

add_executable(LeetCode103
        LeetCodeLib.h 103BinaryTreeZigzagLevelOrderTraversal.cpp)

add_executable(LeetCode104
        LeetCodeLib.h 104MaximumDepthofBinaryTree.cpp)

add_executable(LeetCode105
        LeetCodeLib.h 105ConstructBinaryTreefromPreorderandInorderTraversal.cpp)

add_executable(LeetCode106
        LeetCodeLib.h 106ConstructBinaryTreefromInorderandPostorderTraversal.cpp)

add_executable(LeetCode107
        LeetCodeLib.h 107BinaryTreeLevelOrderTraversalII.cpp)

add_executable(LeetCode108
        LeetCodeLib.h 108ConvertSortedArraytoBinarySearchTree.cpp)

add_executable(LeetCode109
        LeetCodeLib.h 109ConvertSortedListtoBinarySearchTree.cpp)

add_executable(LeetCode110
        LeetCodeLib.h 110BalancedBinaryTree.cpp)

add_executable(LeetCode111
        LeetCodeLib.h 111MinimumDepthofBinaryTree.cpp)

add_executable(LeetCode112
        LeetCodeLib.h 112PathSum.cpp)

add_executable(LeetCode113
        LeetCodeLib.h 113PathSumII.cpp)

add_executable(LeetCode114
        LeetCodeLib.h 114FlattenBinaryTreetoLinkedList.cpp)

add_executable(LeetCode116
        LeetCodeLib.h 116PopulatingNextRightPointersinEachNode.cpp)

add_executable(LeetCode117
        LeetCodeLib.h 117PopulatingNextRightPointersinEachNodeII.cpp)

add_executable(LeetCode118
        LeetCodeLib.h 118Pascal'sTriangle.cpp)

add_executable(LeetCode119
        LeetCodeLib.h 119Pascal'sTriangleII.cpp)

add_executable(LeetCode120
        LeetCodeLib.h 120Triangle.cpp)

add_executable(LeetCode121
        LeetCodeLib.h 121BestTimetoBuyandSellStock.cpp)

add_executable(LeetCode122
        LeetCodeLib.h 122BestTimetoBuyandSellStockII.cpp)

add_executable(LeetCode123
        LeetCodeLib.h 123BestTimetoBuyandSellStockIII.cpp)

add_executable(LeetCode124
        LeetCodeLib.h 124BinaryTreeMaximumPathSum.cpp)

add_executable(LeetCode125
        LeetCodeLib.h 125ValidPalindrome.cpp)

add_executable(LeetCode127
        LeetCodeLib.h 127WordLadder.cpp)

add_executable(LeetCode128
        LeetCodeLib.h 128LongestConsecutiveSequence.cpp)

add_executable(LeetCode129
        LeetCodeLib.h 129SumRoottoLeafNumbers.cpp)

add_executable(LeetCode130
        LeetCodeLib.h 130SurroundedRegions.cpp)

add_executable(LeetCode131
        LeetCodeLib.h 131PalindromePartitioning.cpp)

add_executable(LeetCode136
        LeetCodeLib.h 136SingleNumber.cpp)

add_executable(LeetCode137
        LeetCodeLib.h 137SingleNumberII.cpp)

add_executable(LeetCode146
        LeetCodeLib.h 146LRUCache.cpp)

add_executable(LeetCode155
        LeetCodeLib.h 155MinStack.cpp)

add_executable(LeetCode169
        LeetCodeLib.h 169MajorityElement.cpp)

add_executable(LeetCode174
        LeetCodeLib.h 174DungeonGame.cpp)

add_executable(LeetCode187
        LeetCodeLib.h 187RepeatedDNASequences.cpp)

add_executable(LeetCode190
        LeetCodeLib.h 190ReverseBits.cpp)

add_executable(LeetCode198
        LeetCodeLib.h 198HouseRobber.cpp)

add_executable(LeetCode199
        LeetCodeLib.h 199BinaryTreeRightSideView.cpp)

add_executable(LeetCode206
        LeetCodeLib.h 206ReverseLinkedList.cpp)

add_executable(LeetCode207
        LeetCodeLib.h 207CourseSchedule.cpp)

add_executable(LeetCode215
        LeetCodeLib.h 215KthLargestElementInAnArray.cpp)

add_executable(LeetCode224
        LeetCodeLib.h 224BasicCalculator.cpp)

add_executable(LeetCode225
        LeetCodeLib.h 225ImplementStackUsingQueues.cpp)

add_executable(LeetCode232
        LeetCodeLib.h 232ImplementQueueUsingStacks.cpp)

add_executable(LeetCode236
        LeetCodeLib.h 236LowestCommonAncestorofABinaryTree.cpp)

add_executable(LeetCode290
        LeetCodeLib.h 290WordPattern.cpp)

add_executable(LeetCode295
        LeetCodeLib.h 295FindMedianfromDataStream.cpp)

add_executable(LeetCode300
        LeetCodeLib.h 300LongestIncreasingSubsequence.cpp)

add_executable(LeetCode307
        LeetCodeLib.h 307RangeSumQueryMutable.cpp)

add_executable(LeetCode315
        LeetCodeLib.h 315CountofSmallerNumbersAfterSelf.cpp)

add_executable(LeetCode322
        LeetCodeLib.h 322CoinChange.cpp)

add_executable(LeetCode376
        LeetCodeLib.h 376WiggleSubsequence.cpp)

add_executable(LeetCode402
        LeetCodeLib.h 402RemoveKDigits.cpp)

add_executable(LeetCode409
        LeetCodeLib.h 409LongestPalindrome.cpp)

add_executable(LeetCode449
        LeetCodeLib.h 449SerializeandDeserializeBST.cpp)